# winapi

./: .drone.star  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.jam
.drone/: after-success.sh  boost.sh
.github/scripts/: after-success.sh
.github/workflows/: ci.yml
cmake/: dependencies.cmake
doc/: winapi.qbk
include/boost/detail/: interlocked.hpp
include/boost/detail/winapi/: GetCurrentProcess.hpp  GetCurrentThread.hpp  GetLastError.hpp  GetProcessTimes.hpp  (+69 more)
include/boost/winapi/: access_rights.hpp  apc.hpp  basic_types.hpp  bcrypt.hpp  character_code_conversion.hpp  condition_variable.hpp  config.hpp  critical_section.hpp  crypt.hpp  dbghelp.hpp  debugapi.hpp  directory_management.hpp  dll.hpp  environment.hpp  error_codes.hpp  error_handling.hpp  event.hpp  file_management.hpp  file_mapping.hpp  get_current_process.hpp  get_current_process_id.hpp  get_current_thread.hpp  get_current_thread_id.hpp  get_last_error.hpp  get_proc_address.hpp  get_process_times.hpp  get_system_directory.hpp  get_thread_times.hpp  handle_info.hpp  handles.hpp  heap_memory.hpp  init_once.hpp  jobs.hpp  limits.hpp  local_memory.hpp  mutex.hpp  page_protection_flags.hpp  pipes.hpp  priority_class.hpp  process.hpp  (+14 more)
meta/: libraries.json
test/: Jamfile.v2  travis.jam
test/compile/: windows_h_header.cpp
test/run/: apc_abi.cpp  basic_types_abi.cpp  crypt_abi.cpp  dbghelp_abi.cpp  dll_abi.cpp  error_codes_abi.cpp  file_management_abi.cpp  interlocked.cpp  process_abi.cpp  security_abi.cpp  thread_pool_abi.cpp  winapi_info.cpp
tools/: gen_test_error_codes_abi.pl
(+1 files in other folders)
